infrastructure/network/policies/cluster-policy.yaml
---
# Deny all ingress traffic cluster-wide, allow all egress by default.
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: deny-ingress
spec:
  endpointSelector: {}
  ingress: []
  egress:
  - toEntities:
    - all
---
# Allow DNS traffic to kube-dns from all pods cluster-wide.
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-dns
spec:
  endpointSelector: {}
  egress:
  - toEndpoints:
    - matchLabels:
        k8s-app: kube-dns
        io.kubernetes.pod.namespace: kube-system
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
---
# Allow monitoring and security namespaces to access all other pods cluster-wide.
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-monitoring-and-security
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: monitoring
    - matchLabels:
        io.kubernetes.pod.namespace: security
---
# Allow kubelet to perform health checks on all pods cluster-wide.
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-kubelet-probes
spec:
  endpointSelector: {}
  ingress:
  - fromEntities:
    - host
---
# Allow all traffic to and from Flux controllers cluster-wide.
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-flux
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: flux   # matches all Flux controllers
  ingress:
  - {}   # allow all ingress to flux-system pods
  egress:
  - {}   # allow all egress from flux-system pods
