infrastructure/network/policies/deny-production-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-block-ingress
  namespace: production
spec:
  endpointSelector: {}
  ingress: # deny all ingress
    - {}
  egress:
    - {} # allow egress everywhere (pods, CIDRs, DNS, Internet)
