infrastructure/network/policies/production-policy.yaml
---
# This policy denies all ingress traffic to pods in the 'production' namespace
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-ingress-production
  namespace: production
spec:
  endpointSelector: {}
  ingress: []     # deny all ingress
  egress:
  - toEntities:
    - all         # allow all egress (pods, DNS, Internet, external IPs)
---
# This policy allows ingress traffic from the 'monitoring' and 'security' namespaces to pods in the 'production' namespace
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-monitoring-and-security
  namespace: production
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: monitoring
    - matchLabels:
        io.kubernetes.pod.namespace: security
---
# This policy allows ingress traffic from the 'ingress-nginx' namespace to pods labeled 'nginx: allow-ingress' in the 'production' namespace
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-nginx
  namespace: production
spec:
  endpointSelector:
    matchLabels:
      nginx: allow-ingress
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: ingress-nginx
